17.8
-----
* [*] Authors and Contributors can now view a site's Comments via My Site > Comments. [#16783]
* [*] [Jetpack-only] Fix bugs when tapping to notifications

17.7
-----
* [***] Added blogging reminders. Choose which days you'd like to be reminded, and we'll send you a notification prompting you to post on your site
* [** Does not apply to Jetpack app] Self hosted sites that do not use Jetpack can now manage (install, uninstall, activate, and deactivate) their plugins [#16675]
* [*] Upgraded the Zendesk SDK to version 5.3.0
* [*] You can now subscribe to conversations by email from Reader lists and articles. [#16599]
* [*] Block editor: Tablet view fixes for inserter button. [https://github.com/wordpress-mobile/gutenberg-mobile/pull/3602]
* [*] Block editor: Tweaks to the badge component's styling, including change of background color and reduced padding. [https://github.com/wordpress-mobile/gutenberg-mobile/pull/3642]
* [***] Block editor: New block Layout grid. [https://github.com/wordpress-mobile/gutenberg-mobile/pull/3513]

17.6
-----
* [**] Reader Post details: now shows a summary of Likes for the post. Tapping it displays the full list of Likes. [#16628]
* [*] Fix notice overlapping the ActionSheet that displays the Site Icon controls. [#16579]
* [*] Fix login error for WordPress.org sites to show inline. [#16614]
* [*] Disables the ability to open the editor for Post Pages [#16369]
* [*] Fixed an issue that could cause a crash when moderating Comments. [#16645]
* [*] Fix notice overlapping the ActionSheet that displays the QuickStart Removal. [#16609]
* [*] Site Pages: when setting a parent, placeholder text is now displayed for pages with blank titles. [#16661]
* [***] Block Editor: Audio block now available on WP.com sites on the free plan. [https://github.com/wordpress-mobile/gutenberg-mobile/pull/3523]
* [**] You can now create a Site Icon for your site using an emoji. [#16670]